tests/compile-fail/integration_suite__integration__ecl_features__diff_switch_mismatched_number_of_cases.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: mismatched diff switch lengths in a single statement
   ┌─ <input>:10:10
   │
10 │     I0 = (2:3:4:5) + (1:2:3:4:5);
   │          ^^^^^^^^^   ^^^^^^^^^^^ 5 cases
   │          │            
   │          4 cases


